<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- Dish image -->
        <ImageView
            android:id="@+id/dishImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="dishImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Dish title -->
        <TextView
            android:id="@+id/dishTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/dishImage"
            app:layout_constraintTop_toTopOf="@id/dishImage"
            app:layout_constraintBottom_toBottomOf="@id/dishImage"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Dish Title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
